--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.0.0",
     "astro": "^5.1.1"
   },
   "devDependencies": {
