feat(www) build with Docker, deploy to fly.io
* add `files: ["dist"]` to www's `package.json` so `pnpm deploy` copies
  the built files
* add `apps/www/Dockerfile`, which uses pnpm to build the whole
  workspace, then deploy to `/app`
* add `apps/www/fly.toml` with a basic fly.io app configuration
* add `deploy:www` command to the workspace

See https://fly.io/docs/launch/monorepo/

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -3,11 +3,16 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "astro": "astro",
     "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "deploy": "fly deploy",
+    "dev": "astro dev",
+    "docker:build": "docker build -f ./Dockerfile --target runtime --tag pickmyfruit/www:latest ../..",
+    "preview": "astro preview"
   },
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@astrojs/node": "^9.0.0",
     "astro": "^5.1.1"
