--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ci:check": "pnpm --recursive run check",
     "ci:test": "CI=true NODE_ENV=test pnpm --recursive run test",
     "ci:build": "NODE_ENV=production pnpm --recursive --stream run build",
+    "docker:build": "pnpm -r --if-present --parallel docker:build",
     "setup": "pnpm run reset && pnpm install",
     "reset": "pnpm dlx rimraf --glob ./**/node_modules",
     "build": "NODE_ENV=production pnpm run --recursive --stream build",
@@ -32,6 +33,7 @@
     "prettier:check": "prettier --config prettier.config.js --check .",
     "prettier:fix": "prettier --config prettier.config.js --write .",
     "local:publish": "pnpm publish -r --access public",
+    "deploy:www": "fly deploy --config apps/www/fly.toml --dockerfile apps/www/Dockerfile --build-target runtime",
     "deps:update": "pnpm update -r -i",
     "deps:update:latest": "pnpm update -r -i --latest",
     "deps:dedupe:check": "pnpm dedupe --check",
