--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "type": "git",
     "url": "git+https://github.com/jamesarosen/pickmyfruit.git"
   },
+  "engines": {
+    "node": "22.12.0"
+  },
   "packageManager": "pnpm@9.12.0",
   "scripts": {
     "dev": "NODE_ENV=development pnpm --filter www dev",
