chore(CICD) call lint in PR and main workflows
* Extract the `lint` job from the `pull-request` workflow into a new
  reusable `_lint` workflow
* Rename the `fly` workflow to `main`
* Call the `_lint` workflow from the `pull-request` and `main` workflows
* Block `deploy` job on `lint`

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,8 +5,12 @@ on:
     branches:
       - main # continuous deployment on merge to main
 jobs:
+  lint:
+    uses: ./.github/workflows/_lint.yaml
+
   deploy:
     name: Deploy www
+    needs: lint
     runs-on: ubuntu-latest
     concurrency: deploy-group # optional: ensure only one action runs at a time
     steps:
