chore(CI) publish DNS records after deploy
- add `dns` package with a Terraform configuration for the DNS records
- add `terraform format` and `terraform validate` to the `lint` workflow
- move Fly.io GitHub action into a new `deploy` workflow
- add `terraform apply` to the `deploy` workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,13 +9,6 @@ jobs:
     uses: ./.github/workflows/_lint.yaml
 
   deploy:
-    name: Deploy www
+    uses: ./.github/workflows/_deploy.yaml
     needs: lint
-    runs-on: ubuntu-latest
-    concurrency: deploy-group # optional: ensure only one action runs at a time
-    steps:
-      - uses: actions/checkout@v4
-      - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only --config apps/www/fly.toml --dockerfile apps/www/Dockerfile
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+    secrets: inherit
