--- a/.github/workflows/_lint.yaml
+++ b/.github/workflows/_lint.yaml
@@ -30,3 +30,23 @@ jobs:
 
       - name: Run lint
         run: pnpm lint
+
+  tflint:
+    name: Lint Terraform
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./packages/dns
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: hashicorp/setup-terraform@v3
+
+      - name: Terraform Format
+        run: terraform fmt -check
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Validate
+        run: terraform validate -no-color
