--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,6 @@
 # require pnpm to use the same node version as the project (match this version in CI/CD config for consistent publishing)
-use-node-version=20.14.0
+# @see https://pnpm.io/npmrc#use-node-version
+use-node-version=22.12.0
 
 # only resolve local deps to local files with symlinks when `workspace:` protocol is used to improve predictability
 link-workspace-packages=false
