--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "@astrojs/node": "^9.0.0",
+    "@pickmyfruit/env": "workspace:*",
     "astro": "^5.1.1"
   },
   "devDependencies": {
