--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -7,7 +7,9 @@
     "valibot": "1.0.0-beta.9"
   },
   "devDependencies": {
-    "tsx": "^4.19.2"
+    "@types/node": "^22.10.2",
+    "tsx": "^4.19.2",
+    "typescript": "*"
   },
   "exports": {
     ".": "./dist/index.js"
