chore(cicd) build Docker containers for PRs
The `main` build broke after a recent merge because some dependencies
weren't available in the Docker container. This commit adds
`docker:build` to the pull-request workflow to test the Docker build
on pull requests before merging.

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -6,3 +6,7 @@ on:
 jobs:
   lint:
     uses: ./.github/workflows/_lint.yaml
+
+  build:
+    uses: ./.github/workflows/_build.yaml
+    needs: lint
