fix(dns) fix terraform state
A previous commit added the `dnsimple_zone_record.www_acme` DNS record
to terraform but not the corresponding `terraform.tfstate` file. The
`deploy` workflow applied the change, but couldn't commit the
`terraform.tfstate` file, so subsequent attempts to apply changes
would fail and stop the deploy workflow.

This commit

1. Changes the Terraform `backend` to a Postgres database. This allows
   the `deploy` workflow to write new state after applying changes.
1. Adds a `.env.tpl` file to the `dns` package that defines 1Password
   secrets for the Postgres connection string and other secrets needed
   by Terraform.
1. Adds a `tf` script that wraps `terraform` with an `op inject` to
   turn `.env.tpl` into a `.env` file.
1. Removes the `terraform.tfvars.tpl` file, which is no longer needed
   because the `tf` script passes secrets to Terraform.
1. Sets `PG_CONN_TYPE=Transaction-Pooler` in GitHub actions because
   that environment doesn't support IPv6, so it needs to use
   Supabase's Transaction Pooler to connect to the Postgres database.
1. Changes the `_deploy` and `_lint` workflows to use the `tf` script to
   run Terraform, passing in the OP token.
1. Imports the new DNS zone into the Terraform state

op auth

test deployment on PR build

deploy: use op run for fly

cicd: set NODE_ENV, PG_CONN_TYPE

.env.tpl: quote FLY_API_TOKEN for source-ability

.env.tpl: define PG_CONN_STR

env: add readme

env: simplify pull script

move env to sub-workflows

move PG_CONN_TYPE to tf init

give dns its own .env.tpl

missed dns .env.tpl

dns: separate PGPASSWORD from conn_str

dns: fix export vars to terraform subprocesses

--- a/.github/workflows/_deploy.yaml
+++ b/.github/workflows/_deploy.yaml
@@ -4,6 +4,9 @@ name: Deploy
 on:
   workflow_call:
 
+env:
+  PG_CONN_TYPE: Transaction-Pooler # GitHub Actions doesn't support IPv6
+
 jobs:
   www:
     name: www
@@ -16,7 +19,7 @@ jobs:
       - name: Install Flyctl
         uses: superfly/flyctl-actions/setup-flyctl@master
       - run: |
-          FLY_API_TOKEN=`op read 'op://PickMyFruit/Fly.io/Deploy Token'` \
+          op run --env-file=packages/env/.env.tpl -- \
           flyctl deploy --remote-only --config apps/www/fly.toml --dockerfile apps/www/Dockerfile
         env:
           OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
@@ -36,15 +39,14 @@ jobs:
 
       - uses: hashicorp/setup-terraform@v3
 
-      - name: Set Terraform Variables
-        run: op inject -i terraform.tfvars.tpl -o terraform.tfvars
+      - name: Terraform Init
+        run: ./tf init
         env:
           OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
-
-      - name: Terraform Init
-        run: terraform init
 
       # TODO: store the plan in the pull request and reuse the plan here
       # to ensure we're deploying exactly what was approved
       - name: Terraform Apply
-        run: terraform apply -no-color -auto-approve -backup=- -input=false -var-file="terraform.tfvars"
+        run: ./tf apply -no-color -auto-approve -backup=- -input=false
+        env:
+          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
