feat(env) fetch variables from 1Password
As the number of environment variables continues to increase, it becomes
burdensome to manage them both locally and especially in the CI/CD
pipeline. This commit introduces a new approach to managing environment
variables using the `op` CLI tool from 1Password.

It

 * adds a `.env.tpl` file with references to all the variables needed
   to operate the application.
 * adds a `pull` script to convert those variables into a
   `.env.{development,production}` file.
 * adds a `pull-env` GitHub composite action to fetch the variables
   from 1Password and store them in the job's environment.
 * replaces everywhere that GitHub workflows configure environment
   variables with the new action.
 * passes GitHub secrets (now just the 1Password CLI token) to
   the various `workflow_call` workflows.

--- a/.github/workflows/_deploy.yaml
+++ b/.github/workflows/_deploy.yaml
@@ -12,9 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
+      - uses: ./.github/actions/pull-env
+        with:
+          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
       - run: flyctl deploy --remote-only --config apps/www/fly.toml --dockerfile apps/www/Dockerfile
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
   dns:
     name: DNS
@@ -26,11 +27,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set Environment Variables
-        run: |
-          echo "TF_VAR_dnsimple_account=${{ secrets.DNSIMPLE_ACCOUNT }}" >> $GITHUB_ENV
-          echo "TF_VAR_dnsimple_token=${{ secrets.DNSIMPLE_TOKEN }}" >> $GITHUB_ENV
-          echo "TF_VAR_dnsimple_zone=${{ secrets.DNSIMPLE_ZONE }}" >> $GITHUB_ENV
+      - uses: ./.github/actions/pull-env
+        with:
+          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
 
       - uses: hashicorp/setup-terraform@v3
 
