--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,6 +7,7 @@ on:
 jobs:
   lint:
     uses: ./.github/workflows/_lint.yaml
+    secrets: inherit
 
   deploy:
     uses: ./.github/workflows/_deploy.yaml
