refactor: specify pnpm version

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "@pickmyfruit/workspace",
 	"type": "module",
 	"version": "0.0.1",
+	"packageManager": "pnpm@9.4.0",
 	"private": true,
 	"description": "Pick My Fruit - Workspace",
 	"author": "James A Rosen, Pick My Fruit",
