--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -5,28 +5,29 @@
 	"private": true,
 	"description": "www.pickmyfruit.com Application",
 	"scripts": {
-		"astro": "astro",
-		"build": "astro build",
-		"dev": "astro dev",
+		"build": "vite build",
+		"dev": "vite",
 		"format:check": "prettier --check .",
 		"format": "prettier --write .",
 		"lint:fix": "eslint . --fix",
 		"lint": "eslint .",
-		"preview": "astro preview",
-		"typecheck": "astro check"
+		"preview": "vite preview",
+		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
-		"astro": "^5.14.7"
+		"@tanstack/solid-router": "^1.114.29",
+		"solid-js": "^1.9.5"
 	},
 	"devDependencies": {
-		"@astrojs/check": "^0.9.4",
+		"@tanstack/router-plugin": "^1.114.29",
 		"@eslint/js": "^9.14.0",
 		"@typescript-eslint/eslint-plugin": "^8.11.0",
 		"@typescript-eslint/parser": "^8.11.0",
 		"eslint": "^9.14.0",
-		"eslint-plugin-astro": "^1.2.4",
+		"eslint-plugin-solid": "^0.14.5",
 		"prettier": "^3.3.3",
-		"prettier-plugin-astro": "^0.14.1",
-		"typescript": "^5.6.3"
+		"typescript": "^5.6.3",
+		"vite": "^6.0.7",
+		"vite-plugin-solid": "^2.11.0"
 	}
 }
