--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -35,6 +35,7 @@
 		"drizzle-kit": "^0.31.8",
 		"eslint": "^9.14.0",
 		"eslint-plugin-solid": "^0.14.5",
+		"globals": "^16.5.0",
 		"prettier": "^3.3.3",
 		"tsx": "^4.21.0",
 		"typescript": "^5.6.3",
