--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -6,7 +6,8 @@
 	"description": "www.pickmyfruit.com Application",
 	"scripts": {
 		"build": "vite build",
-		"dev": "vite",
+		"dev": "vite dev",
+		"start": "node .output/server/index.mjs",
 		"format:check": "prettier --check .",
 		"format": "prettier --write .",
 		"lint:fix": "oxlint --fix",
@@ -20,21 +21,23 @@
 	},
 	"dependencies": {
 		"@libsql/client": "^0.15.15",
-		"@tanstack/solid-router": "^1.114.29",
+		"@tanstack/solid-router": "^1.144.0",
+		"@tanstack/solid-start": "^1.145.3",
 		"drizzle-orm": "^0.45.1",
 		"h3-js": "^4.4.0",
 		"solid-js": "^1.9.5"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^10.1.0",
-		"@tanstack/router-plugin": "^1.114.29",
 		"@types/node": "^25.0.3",
 		"drizzle-kit": "^0.31.8",
+		"nitro": "3.0.1-alpha.1",
 		"oxlint": "^1.36.0",
 		"prettier": "^3.3.3",
 		"tsx": "^4.21.0",
 		"typescript": "^5.6.3",
-		"vite": "^6.0.7",
-		"vite-plugin-solid": "^2.11.0"
+		"vite": "^7.3.0",
+		"vite-plugin-solid": "^2.11.0",
+		"vite-tsconfig-paths": "^6.0.3"
 	}
 }
