feat(www): deploy to fly.io
- add `fly.toml`; configure one machine in SJC
- add root `.dockerignore`
- add `docker-compose.yml`, mostly for testing the Docker
  container
- update deploy GitHub Actions workflow to deploy to fly.io
  from `main`
- update `ROADMAP.md`

remove .dockerignore duplication; add docker-compose.yml

debian

--- a/apps/www/Dockerfile
+++ b/apps/www/Dockerfile
@@ -1,34 +1,37 @@
 # Build stage
-FROM node:22-alpine AS builder
+FROM node:22-slim AS builder
 
 # Install pnpm
 RUN corepack enable && corepack prepare pnpm@10.22.0 --activate
 
 WORKDIR /app
 
-# Copy package files
-COPY package.json pnpm-lock.yaml ./
+# Copy workspace configuration files
+COPY pnpm-workspace.yaml pnpm-lock.yaml package.json ./
 
-# Install dependencies
-RUN pnpm install --frozen-lockfile
+# Copy app package.json files to maintain workspace structure
+COPY apps/www/package.json ./apps/www/package.json
 
-# Copy source code
+# Copy packages if any (for future workspace packages)
+# COPY packages/*/package.json ./packages/
+
+# Install dependencies using pnpm workspace
+RUN pnpm install --frozen-lockfile --filter @pickmyfruit/www...
+
+# Copy the entire workspace (excluding dockerignored files)
 COPY . .
 
-# Build the application
-RUN pnpm build
+# Build the www application
+RUN cd apps/www && pnpm build
 
 # Production stage
-FROM node:22-alpine AS runner
-
-# Install pnpm for production
-RUN corepack enable && corepack prepare pnpm@10.22.0 --activate
+FROM node:22-slim AS runner
 
 WORKDIR /app
 
 # Copy built application from builder
-COPY --from=builder /app/.output ./.output
-COPY --from=builder /app/package.json ./package.json
+COPY --from=builder /app/apps/www/.output ./.output
+COPY --from=builder /app/apps/www/package.json ./package.json
 
 # Create directory for SQLite database
 RUN mkdir -p /app/data
@@ -41,4 +44,4 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD node -e "require('http').get('http://localhost:3000/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
 
 # Start the server
-CMD ["pnpm", "start"]
+CMD ["node", ".output/server/index.mjs"]
