feat(www): redirect apex to www; add HSTS
- disable the fly.io `force_https` flag. This feature works well,
  but is limited to 301 redirects and can't be combined with other
  redirects in the same response.
- add a TanStack-Start middleware that
   - redirects apex to www via 307
   - redirects HTTP to HTTPS via 307
   - sets HSTS response headers for all HTTPS requests

--- a/fly.toml
+++ b/fly.toml
@@ -15,7 +15,7 @@ primary_region = 'sjc'
 # HTTP service configuration
 [http_service]
   internal_port = 3000
-  force_https = true
+  force_https = false # handled in @/middleware/tls
   auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
