dx: add bin/after-turn code quality
Rename some pnpm scripts for clarity

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -8,13 +8,15 @@
 		"build": "vite build",
 		"dev": "PORT=${PORT:-5173} vite dev",
 		"start": "node .output/server/index.mjs",
+		"format": "pnpm run format:write",
 		"format:check": "prettier --check .",
-		"format": "prettier --write .",
+		"format:write": "prettier --write .",
 		"lint:fix": "oxlint --fix",
 		"lint": "oxlint",
 		"preview": "vite preview",
-		"test": "vitest",
+		"test": "pnpm run test:watch",
 		"test:run": "vitest run",
+		"test:watch": "vitest",
 		"typecheck": "tsc --noEmit",
 		"db:generate": "drizzle-kit generate",
 		"db:migrate": "drizzle-kit migrate",
