ci: improve lint, vitest annotations
- Prettier doesn't have a native GitHub annotation format.
- TypeScript doesn't have a native GitHub annotation format, but we
  could add https://github.com/EPMatt/reviewdog-action-tsc
  as a separate step later for annotations
- `oxlint --format github` produces workflow commands that GitHub parses
  into inline annotations on PRs.
- Vitest's github-actions reporter is auto-enabled when
  `GITHUB_ACTIONS=true`, but explicitly adding it ensures it works
	alongside the default reporter.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: ['**']
+    branches: ["**"]
   workflow_dispatch:
 
 # Prevent concurrent deployments to the same environment
@@ -26,8 +26,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'pnpm'
+          node-version: "20"
+          cache: "pnpm"
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -36,10 +36,13 @@ jobs:
         run: pnpm format:check
 
       - name: Run lint
-        run: pnpm lint
+        run: pnpm lint:ci
 
       - name: Run typecheck
         run: pnpm typecheck
+
+      - name: Run tests
+        run: pnpm test:ci
 
       - name: Build application
         run: pnpm build
