--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -13,9 +13,11 @@
 		"format:write": "prettier --write .",
 		"lint:fix": "oxlint --fix",
 		"lint": "oxlint",
+		"lint:ci": "oxlint --format github",
 		"preview": "vite preview",
 		"test": "pnpm run test:watch",
 		"test:run": "vitest run",
+		"test:ci": "vitest run --reporter=default --reporter=github-actions",
 		"test:watch": "vitest",
 		"typecheck": "tsc --noEmit",
 		"db:generate": "drizzle-kit generate",
