--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"format:write": "pnpm -r format:write",
 		"lint:fix": "pnpm -r lint:fix",
 		"lint": "pnpm -r lint",
+		"lint:ci": "pnpm -r lint:ci",
 		"typecheck": "pnpm -r typecheck",
 		"deploy": "fly deploy",
 		"deploy:setup": "fly launch --no-deploy",
@@ -20,6 +21,7 @@
 		"ssh": "fly ssh console",
 		"test": "pnpm run test:watch",
 		"test:run": "pnpm run -r test:run",
+		"test:ci": "pnpm run -r test:ci",
 		"test:watch": "pnpm run -r test:watch",
 		"docker:up": "docker compose up --build",
 		"docker:down": "docker compose down",
