dx: add error handling with Sentry
- add `@sentry/solidstart`; add `VITE_SENTRY_DSN` and
  `VITE_SENTRY_ENABLED` to `.env.example`
- configure Sentry to log to `console.error` even if disabled
- add `errorMiddleware`, which captures server-side errors and converts
  them into client-friendly errors
- Extract `RootShell` in root route to prevent double-renders when
  navigations cause exceptions

--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -9,3 +9,6 @@ BETTER_AUTH_SECRET=your-secret-key-here-min-32-chars
 # Optional: Email sending via Resend (magic links logged to console if not set)
 # RESEND_API_KEY=re_xxxxx
 # EMAIL_FROM=Pick My Fruit <noreply@example.com>
+
+VITE_SENTRY_DSN=https://1234567890abcdef@o111111111.ingest.sentry.io/222334456
+# VITE_SENTRY_ENABLED=true # enable Sentry error capturing in local dev
