--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
   test:
     name: Test and Lint
     runs-on: ubuntu-latest
+    env:
+      VITE_SENTRY_DSN: https://test@test.ingest.sentry.io/123
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
